# love

./: .clang-format  .gitattributes  .gitignore  .hgignore  .hgtags  Android.mk  CMakeLists.txt  appveyor.yml  bitbucket-pipelines.yml  changes.txt  configure.in  license.txt  readme-iOS.rtf  readme.md  readme.txt
.github/workflows/: android.yml  annotate.yml  main.yml  testsuite.yml
.trunk/: .gitignore  trunk.yaml
extra/appveyor/: appveyor.yml
extra/cmake/: FindHarfbuzz.cmake  FindLuaJIT.cmake  FindMPG123.cmake  FindModPlug.cmake  FindOgg.cmake  FindOpenAL.cmake  FindOpus.cmake  FindSDL2.cmake  FindTheora.cmake  FindVorbis.cmake  LoveMacros.cmake  NSIS.template.in
extra/nsis/: love.nsi
extra/reshax/: files  makefile  reshax.cpp  reshax.sln  reshax.vcproj
extra/resources/: NotoSans-Regular.ttf.gzip  b64.lua
extra/windows/: love.rc
platform/android/: AndroidManifest.xml
platform/macosx/: Info-Framework.plist  Info.plist  OSX.h  OSX.mm  README.rtf  SDLMain.h  SDLMain.m  autobuild  info.plist  love-Info.plist  loveProj.xcconfig  loveTarget.xcconfig  love_Prefix.pch  modifys  script.sh
platform/macosx/dmg/: DS_Store  VolumeIcon.icns  backgroundImage.tiff
platform/macosx/liblove.xcodeproj/: project.pbxproj
platform/macosx/love-framework.xcodeproj/: project.pbxproj
platform/macosx/love.xcodeproj/: Eric.mode1v3  Eric.pbxuser  project.pbxproj
platform/msvc2008/: audio.vcproj  common.vcproj  event.vcproj  filesystem.vcproj  font.vcproj  gen-project.lua  graphics.vcproj  icon.rc  image.vcproj  joystick.vcproj  keyboard.vcproj  love.sln  love.vcproj  lua.vcproj  master.vct  mouse.vcproj  native.vcproj  physics.vcproj  sound.vcproj  timer.vcproj
platform/msvc2008/audio/: audio.vcproj
platform/msvc2008/common/: common.vcproj
platform/msvc2008/event/: event.vcproj
platform/msvc2008/filesystem/: filesystem.vcproj
platform/msvc2008/font/: font.vcproj
platform/msvc2008/graphics/: graphics.vcproj
platform/msvc2008/image/: image.vcproj
platform/msvc2008/joystick/: joystick.vcproj
platform/msvc2008/keyboard/: keyboard.vcproj
platform/msvc2008/lovedll/: lovedll.vcproj
platform/msvc2008/lua/: lua.c  lua.vcproj
platform/msvc2008/mouse/: mouse.vcproj
platform/msvc2008/native/: native.vcproj
platform/msvc2008/physics/: physics.vcproj
platform/msvc2008/signal/: signal.vcproj
platform/msvc2008/sound/: sound.vcproj
platform/msvc2008/thread/: thread.vcproj
platform/msvc2008/timer/: timer.vcproj
platform/msvc2010/: app.rc  liblove.vcxproj  liblove.vcxproj.filters  love.rc  love.sln  love.vcxproj  love.vcxproj.filters
platform/unix/: Makefile.am  autobuild  automagic  configure.ac  configure.in  cpp14.m4  debian  deps.m4  exclude  gen-makefile  genmodules  get-libs  love.1  love.6  love.desktop  love.desktop.in  love.xml  make-package  mimescript  postinst
platform/unix/debian/: changelog  changelog.in  control  control.in  copyright  docs  liblove-unstable.install  liblove-unstable0.install  liblove0.install  love-unstable.install  love-unstable.manpages  love.install  love.manpages  rules  rules.in
platform/unix/m4/: cpp11.m4
platform/xcode/Lge.xcodeproj/: project.pbxproj
platform/xcode/ios/: Launch Screen.xib  love-ios.plist  lovedocument.icns  luajit-iOS.sh
platform/xcode/liblove.xcodeproj/: project.pbxproj
platform/xcode/love.xcodeproj/: default.pbxuser  project.pbxproj
platform/xcode/macosx/: Lge-macosx.plist  liblove-macosx.plist  love-macosx.plist  love.icns  luajit-macOS.sh  macos-copy-app.plist
snake/: conf.lua  main.lua
src/: .editorconfig  launcher.cpp  love.cpp
src/common/: Color.h  Data.cpp  Data.h  EnumMap.h  Exception.cpp  Exception.h  Matrix.cpp  Matrix.h  Memoizer.cpp  Memoizer.h  MemoryData.cpp  MemoryData.h  Module.cpp  Module.h  OSX.h  OSX.mm  Object.cpp  Object.h  Optional.h  Range.h  Reference.cpp  Reference.h  Stream.cpp  Stream.h  StringMap.cpp  StringMap.h  Variant.cpp  Variant.h  Vector.cpp  Vector.h  android.cpp  android.h  apple.h  apple.mm  b64.cpp  b64.h  config.h  constants.cpp  constants.h  delay.cpp  (+35 more)
src/libraries/: .editorconfig
src/libraries/Box2D/: README.MODIFIED  b2_settings.h
src/libraries/VulkanMemoryAllocator-3.0.0/: CHANGELOG.md
src/libraries/Wuff/: wuff.c  wuff.h  wuff_config.h  wuff_convert.c  wuff_convert.h  wuff_internal.c  wuff_internal.h  wuff_memory.c
src/libraries/box2d/: Box2D.h  b2_body.h  b2_common.h  b2_fixture.h  b2_joint.h  b2_math.h  b2_settings.h
src/libraries/ddsparse/: ddsinfo.h  ddsparse.cpp  ddsparse.h
src/libraries/dr/: dr_flac.h  dr_mp3.h
src/libraries/dr_flac/: dr_flac.h
src/libraries/enet/: enet.cpp  lua-enet.h
src/libraries/glad/: glad.cpp  glad.hpp  gladfuncs.hpp
src/libraries/lanes/: lanes.cpp  lanes.h
src/libraries/lodepng/: lodepng.cpp  lodepng.h
src/libraries/lua53/: lprefix.h  lstrlib.c  lstrlib.h  lutf8lib.c  lutf8lib.h
src/libraries/luahttps/: Android.mk  java.txt  license.txt
src/libraries/luasocket/: luasocket.cpp  luasocket.h
src/libraries/luautf8/: lutf8lib.c  lutf8lib.h
src/libraries/mojoAL/: LICENSE.txt  README.md  mojoal.c
src/libraries/noise1234/: noise1234.cpp  noise1234.h  simplexnoise1234.cpp  simplexnoise1234.h
src/libretro/: libretro.h  main.cpp
src/resources/: resources.cpp  resources.h
src/scripts/: audio.lua  audio.lua.h  auto.lua  boot.lua  boot.lua.h  error.lua  graphics.lua  graphics.lua.h  nogame.lua  nogame.lua.h
testing/: conf.lua  main.lua  readme.md  todo.md
testing/classes/: TestMethod.lua  TestModule.lua  TestSuite.lua
testing/examples/: lovetest_runAllTests.html  lovetest_runAllTests.md  lovetest_runAllTests.xml
testing/output/: lovetest_runAllTests.html  lovetest_runAllTests.xml  notes.txt  readme.md
testing/resources/: alsoft.conf  love.dxt1  love.etc.ktx  mappings.txt  sample.ogv  vk_layer_settings.txt
testing/tests/: audio.lua  data.lua  event.lua  filesystem.lua  font.lua  graphics.lua  image.lua  joystick.lua  keyboard.lua  love.lua  math.lua  mouse.lua  objects.lua  physics.lua  sensor.lua  sound.lua  system.lua  thread.lua  timer.lua  touch.lua  video.lua  window.lua
(+1183 files in other folders)
